--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 5</title>
+    <link rel="shortcut icon" href="/public/assets/videojuego.png" type="image/x-icon">
+    <title>Games Hub</title>
 </head>
 
 <body>
